Leftover wikimedia fixes, minor formatting tweaks

--- a/catznip/docs/release_notes/r05.md
+++ b/catznip/docs/release_notes/r05.md
@@ -84,15 +84,15 @@ Cleaned up and tightened top status bar, especially useful if you prefer a minim
 * fixed : the “PaymentSent” notification isn’t logged
 * fixed : don’t log persisted notifications multiple times
 * internal : trolling Trinity by messing with GCC, just for fun.
-* internal : changed unknown L$ balance from L$20,000,000 to L$-1 after Trinity claimed I owed her $78,000 US.
+* internal : changed unknown L$ balance from L$20,000,000 to L$-1 after Coffee claimed I owed her $78,000 US.
 
 ## RLVa & SharedWear
 
-Aside from some pretty major FUI related bug fixes to [[RLVa]], the big change here is [[SharedWear]] being on by default. [[SharedWear]] means that items placed inside a [[♯RLV Folder|#RLV Folder]] do not need to be placed in attachment point named folders.
+Aside from some pretty major FUI related bug fixes to RLVa, the big change here is SharedWear being on by default. SharedWear means that items placed inside a #RLV Folder do not need to be placed in attachment point named folders.
 
 * changed : flipped “RLVaEnableSharedWear” on by default
 * fixed : disabling a toolbar button doesn’t block the button’s commit signal
 * fixed : LLFloaterReg::toggleInstanceOrBringToFront() bypasses the blocked folder list and the validation signal
 * fixed : region “alerts” aren’t show location or show names filtered
-* fixed : various issues and enhancements relating to {{RLVaCommand|showloc||}}
+* fixed : various issues and enhancements relating to @showloc
 * fixed : the RLV API renames “Avatar Center” to “Root”
