--- a/catznip/docs/release_notes/r07.md
+++ b/catznip/docs/release_notes/r07.md
@@ -32,14 +32,13 @@ Appearance floater has been over hauled with a new 'Inventory View' display opti
 * changed : new toolbars for the outfist list and wearing tabs
 * changed : show attachment point names for worn attachments in the wearing appearance panel
 * fixed   : the currently worn outfit folder isn't selected when opening the appearance sidepanel floater
-* fixed   : "Inventory List Refresh" decimates FPS after opening the "Edit Appearance" item list panel
-** with this change the frame rate will still be impacted, but only when the list control is currently visible
+* fixed   : "Inventory List Refresh" decimates FPS after opening the "Edit Appearance" item list panel (with this change the frame rate will still be impacted, but only when the list control is currently visible).
 
 ## Build Tools
 
 Limited new build tools added including unique pipette pickers, parameter copy and paste, edit object at root, adjustable object axis and ability to rez objects under the land group even across parcel boundaries.
 
-This is a long way from what we have in mind for the build tools so should be seen as a stop gap to make Catznip competative with other TPV's extended controls.
+This is a long way from what we have in mind for the build tools so should be seen as a stop gap to make Catznip competitive with other TPV's extended controls.
 
 ![Catznip_R7-4](./r07/Catznip_R7-4.jpg)
 
@@ -274,7 +273,7 @@ Future updates can now optionally be downloaded by the viewer in the background.
 
 ## Crashes
 
-* fixed : heap corruption warning due to freeing new[]'ed memory with free()
+* fixed : heap corruption warning due to freeing memory with free()
 * fixed : crash in LLVOVolume::calcLOD()
 * fixed : crash switching between the single- and multi-line chat bar if IMs aren't tabbed
 * fixed : crash at logoff in LLTextBase::handleVisibilityChange()
