--- a/catznip/docs/release_notes/r09.md
+++ b/catznip/docs/release_notes/r09.md
@@ -306,7 +306,7 @@ Future releases will be smaller and incremental with more public testing. We hop
 * added : @tprequest=n|y and @accepttprequest:[uuid]=n|y
 * added : Give to #RLV script-to-agent and agent-to-agent offers can contain subfolders
   * limited to 3 levels (e.g. #RLV/~FolderA/FolderB/FolderC)
-  * #RLV folder is auto-created if it doesn't currently exist
+  * The #RLV folder is auto-created if it doesn't currently exist
 * added : RLVa German menu translations
 * changed : show a limited context menu in the nearby people panel when @shownames restricted
   * "Offer/Request Teleport" (filtered)
