--- a/catznip/docs/release_notes/r13.md
+++ b/catznip/docs/release_notes/r13.md
@@ -49,6 +49,7 @@ To create a new preset, simply click the New button at the bottom right. To save
 You can immediately jump into changing the values; however you also have the option to pick ‘Sync with camera’ and move your camera into a rough starting position. Then uncheck the option when you have positioned it where you want it and tweak the values slightly to your liking before saving.
 
 To delete one of your own custom presets, hover over it on the left side and click the trash icon that appears.
+
 ![CameraPresetsDelete](./r13/CameraPresetsDelete.png)
 
  Finally: remember that Catznip has a transparency slider specifically for the Camera and Move floaters at the Me menu / Preferences / Colors tab. If you are one of the people who always keeps (one of) those floaters on screen, setting a low opacity will leave it accessible but not obscure part of the world.
@@ -184,9 +185,9 @@ Play around with the setting - we've found there's definitely a sweet spot but i
 
 ## RLVa
 
-* See [RLVa 2.3 release notes](https://wiki.catznip.com/index.php?title=RLVa_2.3_Release_Notes)
-* See [RLVa 2.4 release notes](https://wiki.catznip.com/index.php?title=RLVa_2.4_1_Release_Notes)
-* See [@setsphere](https://wiki.catznip.com/index.php?title=RLVa_RFC_setsphere)
+* See RLVa 2.3 release notes
+* See RLVa 2.4 release notes
+* See @setsphere
 * Add @getdebug_aspectratio to return the viewer window's AR (helper for @setoverlay)
 * Added @shownametags:&lt;distance&gt;
 * CATZ-586 - Switch to an expandable input editor for the RLVa console
