Add fancy notes everywehere!

--- a/catznip/docs/release_notes/r04.md
+++ b/catznip/docs/release_notes/r04.md
@@ -4,7 +4,7 @@
 
 After much screaming, arguments, thinly veiled threats and finally tricking the Kitty while sleep deprived, we have finally settled on a numbering scheme for Catznip. R for release and then a number incrementally higher then the previous (I kid you not). So anyway, to celebrate we have not one but two releases side by side. Essentially cleaning up the 3.2.0 Beta we released recently, adding couple of new features and a slew of fixes.
 
-**IMPORTANT !** R3 and R4 are functionally identical in all regards with the exception that R4 includes the first round of opengl fixes from Linden Lab. R3 is provided as a fall back for those who have problems. R4 should be noticeably faster.
+!!! note "R3 and R4 are functionally identical in all regards with the exception that R4 includes the first round of OpenGL fixes from Linden Lab. R3 is provided as a fall back for those who have problems. R4 should be noticeably faster."
 
 The Group floater now has a drop down menu allowing you to quickly select your active title for the current group, including the option to have a group active with no title displayed.
 
