--- a/catznip/docs/release_notes/r11.md
+++ b/catznip/docs/release_notes/r11.md
@@ -4,7 +4,7 @@
 
 This release brings Catznip right up-to date with new LL features including Bento (new avatar bones), Jelly Dolls, Graphics presets, HTTP co-routines, LibVLC, OpenJPEG, voice improvements and a lot of bug fixes. We also have a new 'Quick preferences' floater providing access to local rendering, avatar complexity, wearing and windlight options. RLVa has seen more incremental updates and can now be enabled without needing to restart the client.
 
-Important note : Linden Lab's Bento project (new avatar bones) is not backwards compatible with previous viewers and as such all previous versions will be blocked in the near future. Please update to R11 at your earliest convenience and get in touch to resolve any issues.
+!!! warning "Linden Lab's Bento project (new avatar bones) is not backwards compatible with previous viewers and as such all previous versions will be blocked in the near future. Please update to R11 at your earliest convenience and get in touch to resolve any issues."
 
 ## New
 
