--- a/catznip/docs/release_notes/r12.md
+++ b/catznip/docs/release_notes/r12.md
@@ -4,7 +4,7 @@
 
 ### Accept in
 
-![InvAcceptIn](./r12/InvAcceptIn.png)
+![InvAcceptIn >](./r12/InvAcceptIn.png)
 
 This is definitely one of the most important features of this releases and one that (I hope) will have the most impact on how you deal with shopping in Second Life and keeping your inventory manageable.
 
