--- a/catznip/docs/release_notes/r12_1.md
+++ b/catznip/docs/release_notes/r12_1.md
@@ -46,9 +46,10 @@ Example:
 
 If none of the above made much sense then don’t worry; it’s really easy so just play with the option and give it a try and you’ll find what works best for you easily.
 
-As a last note: during testing we found that we would often forget that we turned off the rest of the world so as long as a non-default setting is active the following appears on the bottom of your screen as a reminder you that you’re potentially hiding people around you (it won’t show up in snapshots, don’t worry 😊).
+!!! tip "During testing we found that we would often forget that we turned off the rest of the world!"
+    As long as a non-default setting is active the following appears on the bottom of your screen as a reminder you that you’re potentially hiding people around you (it won’t show up in snapshots, don’t worry 😊).
 
-![RenderOthersAsMessage](./r12_1/RenderOthersAsMessage.png)
+    ![RenderOthersAsMessage ><](./r12_1/RenderOthersAsMessage.png)
 
 ## Login screen
 
