--- a/catznip/docs/release_notes/r12_3.md
+++ b/catznip/docs/release_notes/r12_3.md
@@ -9,7 +9,7 @@ No Kitty magic in this one, but it does bring you 'Bakes on Mesh' and is up to d
 * Linden Lab's Knowledge Base article: <https://community.secondlife.com/knowledgebase/english/bakes-on-mesh-r1512/>
 * Inara's article: <https://modemworld.me/2019/08/27/bakes-on-mesh-a-basic-primer/>
 
-(Note that even if you don't plan on using BoM you still need a BoM-enabled viewer to see others correctly)
+!!! note "Even if you don't plan on using BoM you still need a BoM-enabled viewer to see others correctly."
 
 ## Bugfixes
 
