Moar typos and spelling metakes

--- a/catznip/docs/release_notes/r07.md
+++ b/catznip/docs/release_notes/r07.md
@@ -29,7 +29,7 @@ Appearance floater has been over hauled with a new 'Inventory View' display opti
 * added   : "Sort by" menu on the "Wearing" panel's gear menu to control the item's sort order
 * added   : "Find Original", "Properties" and "Detach Folder" options on the list item context menu
 * added   : ability to switch between a list view and inventory view of currently worn items
-* changed : new toolbars for the outfist list and wearing tabs
+* changed : new toolbars for the outfit list and wearing tabs
 * changed : show attachment point names for worn attachments in the wearing appearance panel
 * fixed   : the currently worn outfit folder isn't selected when opening the appearance sidepanel floater
 * fixed   : "Inventory List Refresh" decimates FPS after opening the "Edit Appearance" item list panel (with this change the frame rate will still be impacted, but only when the list control is currently visible).
@@ -158,7 +158,7 @@ The legacy places search has been added to the main search floater and a compact
 Overhauled Mini Map (CTRL+SHIFT+M in the viewer) can now show the world map image as a backround with parcel lines rendered over the top, special parcel flags are also shown (In addition to objects and such). Zoom menu has been redone with sensible settings.
 
 * added : property line overlay on the minimap
-* added : (optionally) colour collision parcels a transparent red
+* added : (optionally) color collision parcels a transparent red
 * added : (optionally) show for-sale parcels with a yellow highlight on the mini-map
   * controlled by 'MiniMapForSaleParcels', defaults to off
 * added : "MiniMapObjects" setting to control the rendering of objects on the minimap
