--- a/catznip/docs/release_notes/r08.md
+++ b/catznip/docs/release_notes/r08.md
@@ -2,7 +2,7 @@
 
 ![Catznip_R8](./r08/Catznip_R8.jpg)
 
-This release brings initial support from Linden Lab (LL) for server side appearance (SSA, formerly known as SSB, I know, right..), havok integration adds the long awaited ability to upload mesh objects and the full set of pathfinding features. We've added a couple more little usability features that we know you'll love and some minor updates to RLVa.
+This release brings initial support from Linden Lab (LL) for server side appearance (SSA, formerly known as SSB, I know, right..), Havok integration adds the long awaited ability to upload mesh objects and the full set of pathfinding features. We've added a couple more little usability features that we know you'll love and some minor updates to RLVa.
 
 We've been holding back on this release wanting to make sure we provided a good experience with SSA when it goes live, LL are working up to the wire and we didn't feel entirely comfortable with the state of the project. As it stands this release provides only initial support for SSA, There will be more from LL and that will be in Catznip R9.
 
@@ -52,7 +52,7 @@ Personally, this feels like one of the most polished releases we have ever done 
 * fixed : "Send IM" and "Offer Teleport" context menu options don't work in the group floater
 * fixed : some group members are listed more than once in the group member list
 * fixed : scroll list columns can't be resized
-  * additionally, attempting to resize a column and then changing the floater size caused the columns to dissapear or be layed out randomly
+  * additionally, attempting to resize a column and then changing the floater size caused the columns to disappear or be layed out randomly
   * double-click fitting was also broken
 * fixed : inventory folders don't open to show filtered items when searching
 * fixed : editing a wearable and clicking the "Save" button takes off the wearable
