--- a/catznip/docs/release_notes/r09.md
+++ b/catznip/docs/release_notes/r09.md
@@ -24,7 +24,7 @@ Future releases will be smaller and incremental with more public testing. We hop
 * added : drag-and-drop textures directly onto a prim face using local textures as the backing store (Windows only)
 * added : drag-and-drop uploading of textures (Windows only)
 * added : "Selection Options" floater to the build floater grouping all selection related viewer options
-* added : "World / Options / Select Only Copiable Objects" option to the main viewer menu as well
+* added : "World / Options / Select Only Copyable Objects" option to the main viewer menu as well
 * added : option to prevent turning towards a newly selected object
   * controlled by 'RotateAtSelection'
 * added : option to prevent the avatar's arm from pointing at a newly selected object
@@ -49,16 +49,16 @@ Future releases will be smaller and incremental with more public testing. We hop
 * added : [CATZ-102] Ability to scroll the conversations floater tabs with the mouse wheel
 * added : "Request Teleport" to the context menu of a resident link in chat
 * added : "Chat Bar" option to the IM session chat bar and chat history context menus to toggle between expandable and single-line text editors
-* added : split the "Teleport" option on the chiclet P2P context menu into "Offer Teleport" and "Request Teleport" and added an option for "Pay" as well</commit>
+* added : split the "Teleport" option on the chiclet P2P context menu into "Offer Teleport" and "Request Teleport" and added an option for "Pay" as well
 * added : option to control whether chat or group notice toasts will show above/below unfocused floaters (such as the mini-map)
   * main setting is "NotificationToastFrontmost"
   * "NotificationToastFrontmostFocus" further controls whether new notification toasts will appear above/below floaters that currently have focus (such as the conversations floater)
 * added : "Conversations" button to the toolbar commands
   * "Nearby Chat" will highlight when the nearby char floater is visible (whether docked or undocked) and toggle it when pressed
   * "Conversations" will highlight when the conversations floater is visible and toggle it when pressed
-  * changed : 'ChicletBarAlignment' can be toggled at runtime and no longer requires a restart** changed : behaviour of arrow keys when focus is on the conversations container, nearby chat or IM conversation
+  * changed : 'ChicletBarAlignment' can be toggled at runtime and no longer requires a restart** changed : behavior of arrow keys when focus is on the conversations container, nearby chat or IM conversation
     * CHUI default: arrow keys never move unless "ArrowKeysAlwaysMove" is set to TRUE
-    * additionally: arrow keys move the avatar if focus is on a conversation floater and no text has been entered (legacy behaviour)
+    * additionally: arrow keys move the avatar if focus is on a conversation floater and no text has been entered (legacy behavior)
 * added : "control panel" for P2P IM sessions which currently shows an avatar's profile picture and an excerpt of their profile information
 * added : configurable sounds for teleport and inventory offers, script question dialogs, group notices and region restart events
 * added : toolbar buttons for group conversations    -&gt; "View Information", "Show Chat History" and "View Notices"
@@ -69,7 +69,7 @@ Future releases will be smaller and incremental with more public testing. We hop
 * added : significant speed improvements when filtering inventory
 * added : 'Open in Inventory' checkbox to the "Buy Contents" floater + UI layout cleanup
 * added : texture tooltip for inventory items
-* added : "Copy Outfit List to Clipboard" is now available when right-clicking any outfit folders in your invenotry
+* added : "Copy Outfit List to Clipboard" is now available when right-clicking any outfit folders in your inventory
 * added : option to clear the current inventory filter rather than create a new inventory floater when the shown item is currently filtered
   * controlled by 'InventoryShowItemClearsFilter' (default: clear filter)
 * changed : always show the "Received Items" folder if the inventory's panel contents are filtered (with a non-default filter)
@@ -119,7 +119,7 @@ Future releases will be smaller and incremental with more public testing. We hop
 * added : recovery support for unsaved notecards (embedded items are not preserved)
 * added : texture tooltips for embedded notecard items
 * added : use the current selection as the default search string
-* added : highlighting of occurences in the target editor when using the Search/Replace floater
+* added : highlighting of occurrences in the target editor when using the Search/Replace floater
 * added : keyboard shortcuts to the script editor menu
   * F1 opens the LSL reference
   * Shift+F1 opens keyboard help
