--- a/catznip/docs/release_notes/r10.md
+++ b/catznip/docs/release_notes/r10.md
@@ -53,7 +53,7 @@ Due to a lack of time and suitable hardware we are unable to build, test and deb
 * added : feedback floater to allow users to submit viewer feedback easily
 * added : Clicking a group notice in the notifications floater will now toggle between the expanded and condensed views
 * added : CATZ-164: Added "Show Web Browser" menu item to the bottom Advanced menu (homepage is customizable through the * added : 'BrowserHomePage' debug setting)
-* added : CATZ-173: Name tag colour option for "friends" and "others" to the preferences 'Colors' panel
+* added : CATZ-173: Name tag color option for "friends" and "others" to the preferences 'Colors' panel
 * added : CATZ-211: "Paste and teleport" functionality for the input location control
 
 ## RLVa Updates and Fixes
