--- a/catznip/docs/release_notes/r11.md
+++ b/catznip/docs/release_notes/r11.md
@@ -29,7 +29,7 @@ This release brings Catznip right up-to date with new LL features including Bent
 * [FIXED] CATZ-267: Offers/notifications from/to avatars with the Resident last names log to the wrong file
 * [FIXED] Avatars with large inventories remain a cloud for a long time after clearing cache and relogging
 * [FIXED] CATZ-178: Ability to switch between IM tabs with keyboard
-* [FIXED] CATZ-238: Picking an object tint color is unintuitive when the current colour is white/black
+* [FIXED] CATZ-238: Picking an object tint color is unintuitive when the current color is white/black
 * [FIXED] CATZ-20: Mini Map context menu does not allow 'Stop Tracking' on occasion
 * [FIXED] CATZ-239: "Invite to group" from an open conversation doesn't pre-fill the other party's name
 * [FIXED] CATZ-263: Sorting by appearance doesn't take the new Bento attachment spots into consideration
