--- a/catznip/docs/release_notes/r12.md
+++ b/catznip/docs/release_notes/r12.md
@@ -226,11 +226,11 @@ Another long-time request since LL took this away; clicking the button will flip
 
 ![BuildFlip](./r12/BuildFlip.png)
 
-### Hex/HTML colour value support
+### Hex/HTML color value support
 
 I was trying something with complementary colors and got annoyed that I had to keep converting from hex color value to RGB so there you go 😊.
 
-![BuildHexColour](./r12/BuildHexColour.png)
+![BuildHexColor](./r12/BuildHexColour.png)
 
 ## Region restart floater shaking
 
@@ -331,7 +331,7 @@ No new functionality but the following bugs were fixed:
 * CATZ-337 - 'UI Size' can't easily be reset to 1.0
 * CATZ-364 - Render quality in the 'About' floater appears to be zero-based
 * CRASH-4 - Crash when closing a chat conference through the IM well floater (or right-clicking the IM well button / Close All)
-* 'DeleteItems' notfication can’t be permanently ignored
+* 'DeleteItems' notification can’t be permanently ignored
 * Can't eject a member in a group role from the participant context menu
 * Clicking between the world and the inventory floater freezes the viewer
 * Show eject/ban confirmation request and enable the context menu option for both single and multiple selections
