--- a/catznip/docs/release_notes/r12_3.md
+++ b/catznip/docs/release_notes/r12_3.md
@@ -14,7 +14,7 @@ No Kitty magic in this one, but it does bring you 'Bakes on Mesh' and is up to d
 ## Bugfixes
 
 * Minor installer issues
-* Revert SL-1579 and allow taking rezzed items if their originaitng folder was 'Receved Items'
+* Revert SL-1579 and allow taking rezzed items if their source folder was 'Received Items'
 * Crash in busy/crowded places while camming around (thank you Nicky from Firestorm)
 * CATZ-532: Avatar (sometimes) ends up deformed when detaching something while an animesh attachment is worn
 * CATZ-535: Remove Google+ links
