Add abbreviations & glossery support to pages

--- a/catznip/docs/release_notes/r04.md
+++ b/catznip/docs/release_notes/r04.md
@@ -55,3 +55,5 @@ After some debate a wear option for inventory folders has been added and you can
 * fixed : “Copy” submenu on the avatar context menus should be disabled when @shownames restricted
 * fixed : “Teleport” option on the avatar context menus should be disabled when @shownames restricted
 * fixed : clicking chat toasts opens the speaking resident’s profile when @shownames restricted
+
+--8<-- "includes/abbreviations.md"
