--- a/catznip/docs/release_notes/r05.md
+++ b/catznip/docs/release_notes/r05.md
@@ -96,3 +96,5 @@ Aside from some pretty major FUI related bug fixes to RLVa, the big change here 
 * fixed : region “alerts” aren’t show location or show names filtered
 * fixed : various issues and enhancements relating to @showloc
 * fixed : the RLV API renames “Avatar Center” to “Root”
+
+--8<-- "includes/abbreviations.md"
