--- a/catznip/docs/release_notes/r06.md
+++ b/catznip/docs/release_notes/r06.md
@@ -47,3 +47,5 @@ Of the numerous bugs ironed out in this release, the delay when you right click 
 * fixed : scrolling through the friends list with the arrow keys spikes ‘Find Widgets’
 * fixed : persistent notifications in the syswell aren’t sorted by date.
 * changed : clamp the maximum value of texture repeats to 256 (up from 100)
+
+--8<-- "includes/abbreviations.md"
