--- a/catznip/docs/release_notes/r07.md
+++ b/catznip/docs/release_notes/r07.md
@@ -451,3 +451,5 @@ Fixed for *ALL* file dialogs in the viewer. You are no longer against the clock 
 * internal : properly support @*this=force from the LSL attach() event
 * internal : folder locks (and cached wearable and attachment locks due to folder locks) show in the locks debug floater
 * internal : Made mental note to test RLVa more on kitty.
+
+--8<-- "includes/abbreviations.md"
