--- a/catznip/docs/release_notes/r08.md
+++ b/catznip/docs/release_notes/r08.md
@@ -60,3 +60,5 @@ Personally, this feels like one of the most polished releases we have ever done 
 * fixed : viewer hangs when copying the contents of an object to inventory while typing
 * changed : updated gpu_table.txt (from Firestorm)
 * changed : updated LSL constant, function tooltips and keywords (from Firestorm)
+
+--8<-- "includes/abbreviations.md"
