--- a/catznip/docs/release_notes/r08_1.md
+++ b/catznip/docs/release_notes/r08_1.md
@@ -23,3 +23,5 @@ Catznip R8.1 is essentially R8 with the very latest SSA changes, a few crash fix
   * 'PluginUseReadThread' to enabled
   * 'ShowAdvancedGraphicsSettings' to enabled
   * 'NameTagShowFriends' to enabled
+
+--8<-- "includes/abbreviations.md"
