--- a/catznip/docs/release_notes/r09.md
+++ b/catznip/docs/release_notes/r09.md
@@ -322,3 +322,5 @@ Future releases will be smaller and incremental with more public testing. We hop
 * fixed : region name and global coordinates are shown on the About floater when @showloc restricted
 * fixed : "Find Original" on the Wearing panel's context menu opens the default inventory floater when @showinv restricted
 * fixed : RLVa floater button sizes with wide font.
+
+--8<-- "includes/abbreviations.md"
