--- a/catznip/docs/release_notes/r10.md
+++ b/catznip/docs/release_notes/r10.md
@@ -61,3 +61,5 @@ Due to a lack of time and suitable hardware we are unable to build, test and deb
 * added : Better handling of temporary attachments when checking attachment locks
 * fixed : Reimplemented the @adjustheight command using LL's new hover functionality
 * changed: More user-friendly and intuitive enable/disable toggling behavior
+
+--8<-- "includes/abbreviations.md"
