--- a/catznip/docs/release_notes/r11.md
+++ b/catznip/docs/release_notes/r11.md
@@ -67,3 +67,5 @@ This release brings Catznip right up-to date with new LL features including Bent
 * [FIXED] Can't copy/paste folders when RLVa is disabled
 * [FIXED] RLVa can be enabled from the command prompt (bypassing user consent)
 * [FIXED] Invalid check for @shownames exception on object chat
+
+--8<-- "includes/abbreviations.md"
