--- a/catznip/docs/release_notes/r12.md
+++ b/catznip/docs/release_notes/r12.md
@@ -346,3 +346,5 @@ No new functionality but the following bugs were fixed:
 Last, but certainly not least there's also been a lot of work done on a new Catznip website, as well as completely redoing the way the updater and crash reporter work. We'll be slowly unveiling this over the course of the year but for now you there's at least the new download page @ <https://get.catznip.com>!
 
 ![GetCatznipCom](./r12/GetCatznipCom.png)
+
+--8<-- "includes/abbreviations.md"
