--- a/catznip/docs/release_notes/r12_1.md
+++ b/catznip/docs/release_notes/r12_1.md
@@ -242,3 +242,5 @@ This is a list of all the other bugfixes included in this release :
 ## RLVa v2.2
 
 Please read RLVa_2.2_Release_Notes for the detailed RLVa release notes.
+
+--8<-- "includes/abbreviations.md"
