--- a/catznip/docs/release_notes/r12_2.md
+++ b/catznip/docs/release_notes/r12_2.md
@@ -101,3 +101,5 @@ However, sometimes you typed in a keyword (or otherwise filtered your inventory)
 ## RLVa
 
 * CATZ-509: RLVa Add @getheightoffset to get the current offer height (with @adjustheight's scale)
+
+--8<-- "includes/abbreviations.md"
