--- a/catznip/docs/release_notes/r12_3.md
+++ b/catznip/docs/release_notes/r12_3.md
@@ -26,3 +26,5 @@ No Kitty magic in this one, but it does bring you 'Bakes on Mesh' and is up to d
 ## Linden Lab viewer changes
 
 LL Release Notes: <https://releasenotes.secondlife.com/viewer/6.3.1.530559.html>
+
+--8<-- "includes/abbreviations.md"
