--- a/catznip/docs/release_notes/r13.md
+++ b/catznip/docs/release_notes/r13.md
@@ -191,3 +191,5 @@ Play around with the setting - we've found there's definitely a sweet spot but i
 * Add @getdebug_aspectratio to return the viewer window's AR (helper for @setoverlay)
 * Added @shownametags:&lt;distance&gt;
 * CATZ-586 - Switch to an expandable input editor for the RLVa console
+
+--8<-- "includes/abbreviations.md"
